Repair margin collapse for chromium browsers 2

--- a/docs/css/page/home.css
+++ b/docs/css/page/home.css
@@ -9,7 +9,7 @@ html * {
 .Page {
   height: 100vh;
   width: 100%;
-  padding: 0.01px;
+  padding: 0.02px;
   position: relative;
   z-index: 50;
 }
